added partial draft4 generator (hacky, extending draft3 generator)

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist = py26, py27, py33, py34
+# json-schema-generator still doesn't work on py3 :(
+# envlist = py26, py27, py33, py34
+envlist = py26, py27
 
 [testenv]
 setenv =
