updating tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,8 @@
 [tox]
 # json-schema-generator still doesn't work on py3 :(
-# envlist = py26, py27, py33, py34
-envlist = py26, py27
+envlist = py26, py27, pypy
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/json_schema_merger
 commands = python setup.py test
 deps =
     -r{toxinidir}/requirements.txt
