dropping support for python 2.6, adjust tox config

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-# json-schema-generator still doesn't work on py3 :(
-envlist = py26, py27, pypy
+envlist = py27, pypy
 
 [testenv]
-commands = python setup.py test
 deps =
-    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/tests/requirements.txt
+    .
+commands = py.test {posargs:skinfer tests}
